@@ -10,14 +10,15 @@
  ("buffer-env" . "fc5cab4db55f0b95c4b97fbe3104e394da34b91a")
  ("cape" . "97641dcd1ebca1007badd26b2fb9269b86934c22")
  ("chez" . "605a81ff7b2d2b275a3ec68e3ce7e5b50f85014d")
- ("chicken" . "5f2c1bb446af6ae4aec9c8d74d4ecb34031706fd")
- ("claude-code-ide.el" . "907f28ed82b743b0fff945ebe772d10953d78bfe")
+ ("chicken" . "8342bad8ce1c79fee3563cd95ee27a8b062f6a9e")
+ ("claude-code-ide.el" . "76d83f30fd39b8d4b16b7f2b185e1e3f74cab227")
  ("clipetty" . "01b39044b9b65fa4ea7d3166f8b1ffab6f740362")
  ("closql" . "08194fb97deb3a83863da7731cb316aa62058f22")
  ("cmake-mode" . "b08b5d9045308362a623a4f576896d55ffecfd52")
  ("colorful-mode" . "2b518991b78fad64dc86aa048c68240d845a9061")
  ("compat" . "97f24af413a38a7f1aaedb29f5aaaa333796a5b4")
- ("consult" . "9c79441fb8ec6d837bf6f3fa1124aa7c2f980669")
+ ("cond-let" . "7d3d9c6b28fadaa48f2015df4169c666dd9986dd")
+ ("consult" . "c8bbb3f1e2fbbdcca773498e2db168c0929c3434")
  ("consult-dir" . "4532b8d215d16b0159691ce4dee693e72d71e0ff")
  ("consult-eglot" . "2816f8aad7d6a1e6d5e5b4a5e04c1d74b82b26b8")
  ("consult-everything" . "ac574a63b3e869787bbe6354b57a7a8021647ee3")
@@ -28,34 +29,29 @@
  ("debian-el" . "bc36846aa2a185a580a7f06230b32d38459fb324")
  ("devdocs.el" . "4023409017d37dc2d6c230fe010fadb917b4395b")
  ("diff-hl" . "39f076efa85110c4bcc9b73994f30a7d52312c98")
- ("dpkg-dev-el" . "042404f71699a1cbc1377994eeecef261acf7476")
+ ("dpkg-dev-el" . "0854988fc85c7a8963ae2f290567cf136d9325e7")
  ("eat" . "48f5f94fc449d751165fd1f031fb751157163942")
  ("editorconfig-emacs" . "f85ec9724b01fb144159b472daad136f0941631f")
- ("eglot" . "e187a1de0e891eb9d734087fb5abca33ae79d7ad")
  ("eglot-tempel" . "c6c9a18eba61f6bae7167fa62bab9b637592d20d")
- ("eldoc" . "5cba6bcbd3b3d3f1ae9668cf6a1f9e2d3ebb10df")
  ("eldoc-box" . "8c5104f06700b774b8af76d77a440e334fbc03e9")
  ("eldoc-diffstat" . "33aa6d7ee5d0e712b112c74ec6e076463b540e9e")
  ("elfeed" . "a39fb78e34ee25dc8baea83376f929d7c128344f")
- ("emacs-async" . "dfbd8796ded77e61e3c58c6da083a1753bc7bcb0")
- ("emacs-repeat-fu" . "b91d55001cca71e5df7a9f665c7da73ab9f55efd")
+ ("emacs-async" . "d69af6eeebc972b40412477cd344c050e432cd99")
+ ("emacs-repeat-fu" . "9cffa91052a0f5a1c7f1ff44c254f33b9350d6b8")
  ("emacs-rime" . "89c71f1077a9a30ff97a8775f26ade58ece9b2a6")
  ("emacs-web-server" . "6357a1c2d1718778503f7ee0909585094117525b")
  ("emacs-websocket" . "40c208eaab99999d7c1e4bea883648da24c03be3")
  ("emacsql" . "bc6713fb763388f43111ba1488df9263d5dc505b")
- ("embark" . "4f3ac585cd87affc1d208ea6f0fbb9798b88c1bb")
- ("erc" . "0dd612bad6427647c39c25d6f015cee8911d6cb9")
- ("external-completion" . "547b335f9179bcd07b11658d2fd61e3cb02b256e")
+ ("embark" . "1371a1e33e3a3d96557beb28dccf1fa762f6ae22")
  ("f.el" . "931b6d0667fe03e7bf1c6c282d6d8d7006143c52")
- ("flymake" . "0bfd47670ce9ad3f8a23ed80b6f5efff668dcac5")
- ("forge" . "3402272a8932e826d709c3b1c2d4ef40909e7246")
+ ("forge" . "2fb110bd9a3e272056886b5538d72024c2d41282")
  ("ftable" . "b70448464de92ca9cc93c766044dc6f39f4ad11a")
  ("geiser" . "c8b862f00e208f2c09bf2a2b2436af0a466a2531")
- ("ghub" . "d50395c2a84dec314ea50d8e2b5d253dbb5029b7")
+ ("ghub" . "8d6f6e5d949f0afdd56c61f6f88936b68e976786")
  ("git-modes" . "27af84f31ed022267b7108ad10ea286631f88e88")
  ("go-mode.el" . "0ed3c5227e7f622589f1411b4939c3ee34711ebd")
  ("goggles" . "791140df23e11436ba825043e85c47a41fd65c5c")
- ("gptel" . "0b1f9f7fb0d2c5e758db4acfef3352893178c74e")
+ ("gptel" . "74fba4dfd9f698ebd2d1a074034889ec534fa194")
  ("gptel-aibo" . "f55b5170b9dfc3023110ec8cad66e6f352ea9d8a")
  ("guile" . "a0f111f8dedd31c593c4ed12c0b99745f3c1340f")
  ("hl-todo" . "b8be53068b3469572d66cfedc540f4130901a3da")
@@ -67,8 +63,8 @@
  ("lin" . "cd3fc3abfa5bba6d91d4e61de78b4b20e0f7909b")
  ("llama" . "5990ae7b5cba3425252f64b9377352c9a01690d5")
  ("logos" . "331ec77e8ec75327d668d835fc743edd629f7af6")
- ("magit" . "cc40a7b1f9d2f343779170591bfbd2c4cecae998")
- ("marginalia" . "a975ac0bfe927f46cd179a7e4899bf52fd7a6ea2")
+ ("magit" . "98a0447d975e5640a4f8dc64fdec506841b6f596")
+ ("marginalia" . "30e6813c8142ef8cb45e6f9bdd23ead1c80b9b2e")
  ("markdown-mode" . "d51c469133d220823cc6ab50ff8e8743ed6e42fb")
  ("mathjax" . "84e5fd902d83c11460e008de8ed0aef74cb9a62a")
  ("meow" . "034fb555dc955f18b097ca1a2cbfa9c0a1df6b19")
@@ -83,12 +79,11 @@
  ("nerd-icons.el" . "e98b14248fec120cc23c5f3a5aa1128d98156c2c")
  ("olivetti" . "845eb7a95a3ca3325f1120c654d761b91683f598")
  ("orderless" . "31812d9252c6cfa7eae8fa04cd40c8b2081e9936")
- ("org" . "526a7d1cc65409d5546b009f54fed28726a9457d")
  ("org-modern" . "04cbbb639c16cab821cf3db5bf6f1def50115a8d")
- ("outline-minor-faces" . "5429d48d265a690fbecda1e94c40f1442eafbdb9")
+ ("outline-minor-faces" . "52a674c70923c08cf81ce97a706513ebec55efe6")
  ("p-search" . "c382c80947a95825e258332d6f89bd6be496d914")
  ("paredit" . "af075775af91f2dbc63b915d762b4aec092946c4")
- ("paren-face" . "3804fde5c6da5bd92413e471a2a0c6df224d0946")
+ ("paren-face" . "88cbcf779d3c382cf785a540a2134a663b753d7b")
  ("pcre2el" . "b4d846d80dddb313042131cf2b8fbf647567e000")
  ("pdf-tools" . "30b50544e55b8dbf683c2d932d5c33ac73323a16")
  ("peg" . "c9155d5586909953861421ce05a341d59b53fa73")
@@ -97,7 +92,6 @@
  ("popup-el" . "b189a4e8ccf18356395878c3d38a23df834d3898")
  ("posframe" . "12f540c9ad5da09673b2bca1132b41f94c134e82")
  ("prism.el" . "2fa8eb5a9ca62a548d33befef4517e5d0266eb28")
- ("project" . "30acfc49e54e2bc310be1b1bf99484d75408b6e2")
  ("pulsar" . "cc8fe14e0dac711f45af93769df718c475bd9093")
  ("pyim" . "64731c213cf50f44f44f9a7d1ab269b387e66663")
  ("pyim-basedict" . "55d9b324831b0fc79ff62f1c6f21aad72341a114")
@@ -110,8 +104,8 @@
  ("systemd-mode" . "8742607120fbc440821acbc351fda1e8e68a8806")
  ("tablist" . "fcd37147121fabdf003a70279cf86fbe08cfac6f")
  ("telega.el" . "ff06f58364375c96477561f265e3dbf55a8ad231")
- ("tempel" . "e3c0f70a1041fadf75e4c2abdf588ac9f65d4377")
- ("timeout" . "639e0f8f2686e6ae0b302723f3a16f3cb57bcca8")
+ ("tempel" . "1404b6bb60de78d1a878112eaeab3c397ee1b229")
+ ("timeout" . "0efdd2173cfd84a9f49b721ce7ef685048499905")
  ("toml-mode.el" . "f6c61817b00f9c4a3cab1bae9c309e0fc45cdd06")
  ("transducers.el" . "a0b929ba76cdf081c8c5c005e364b57bc93d5bbe")
  ("transient" . "07a104aa73b5d5e3168ba6e202ebfb60188af6ed")
@@ -119,13 +113,12 @@
  ("ultra-scroll" . "8c92a17743af05fedc76beeb58da5eab48398035")
  ("vala-mode" . "d696a8177e94c81ea557ad364a3b3dcc3abbc50f")
  ("valign" . "8b0002844cb6012ac4f8952e255c165e0e3be5b6")
- ("vertico" . "c479ee6d2d31478a5dd8235157c8308098585b80")
+ ("vertico" . "5140630c2396623c3d7de85cebba72cfd11b9af5")
  ("visual-fill-column" . "e391b52922086ac38397a3325933900b6d90f9f0")
  ("vundo" . "f57937d7f57e6d081f567debf14f11d87a28962f")
  ("with-editor" . "7787e19764c1089390584ac17a80129ef9afaa14")
  ("ws-butler" . "67c49cfdf5a5a9f28792c500c8eb0017cfe74a3a")
  ("xr" . "f45c51feb367baadce5d4356068040b1836bea4d")
- ("xref" . "63b5875528e9c8dba3abbc76dae1b49351273c1c")
  ("xterm-color" . "2ad407c651e90fff2ea85d17bf074cee2c022912")
  ("yaml-mode" . "d91f878729312a6beed77e6637c60497c5786efa")
  ("yaml.el" . "f99ef76c80e6fc3fcf650c4fe34e10726594a4c4"))
